--- a/collab_env/dashboard/templates/base.html
+++ b/collab_env/dashboard/templates/base.html
@@ -35,6 +35,7 @@
                     <a href="/video" class="nav-link">2D Video</a>
                     <a href="/3d" class="nav-link">3D Mesh</a>
                     <a href="/sync" class="nav-link">Sync View</a>
+                    <a href="/dual-video" class="nav-link">🎬 Dual Video</a>
                 </div>
             </div>
         </nav>
